--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/dummy
 spring.datasource.username=postgres
 spring.datasource.password=password
+
+server.servlet.context-path=/oyoams/api
