--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/dummy
+spring.datasource.url=jdbc:postgresql://localhost:3308/oyoams
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=postgres
 
 server.servlet.context-path=/oyoams/api
